[metadata]
name = boned-html
version = attr: boned_html.__version__
description = A small library to smartly extract text from html and eventually rebuild html
long_description = file: README.rst
author = Jurismarches ,
author_email = contact@jurismarches.com ,
url = https://github.com/jurismarches/boned-html
licence = MIT Licence
keywords = html, lxml, scrapping
classifiers =
    Development Status :: 3 - Alpha,
    License :: OSI Approved :: MIT License,
    Intended Audience :: Developers,
    Programming Language :: Python,
    Programming Language :: Python :: 3.4,
requires =
    lxml

[options]
packages=boned_html


[options.extras_require]
test =
    nose>=1.3.7
    coverage>=4.0.3
quality =
    flake8>=2.5.4
